--- a/package.json
+++ b/package.json
@@ -27,14 +27,6 @@
 			{
 				"command": "extension.vsstack.getTelemetryLogFile",
 				"title": "Get Telemetry Log File Workspace"
-			},
-			{
-				"command": "extension.vsstack.inspectNetwork",
-				"title": "Inspect Network"
-			},
-			{
-				"command": "extension.vsstack.test",
-				"title": "Test Me"
 			}
 		]
 	},
@@ -59,7 +51,6 @@
 		"@vscode/test-electron": "^2.3.0",
 		"eslint": "^8.39.0",
 		"glob": "^8.1.0",
-		"mocha": "^10.2.0",
 		"ts-loader": "^9.4.2",
 		"typescript": "^5.0.4",
 		"webpack": "^5.81.0",
@@ -68,11 +59,7 @@
 	"dependencies": {
 		"axios": "^1.4.0",
 		"bufferutil": "^4.0.7",
-		"chart.js": "^4.3.0",
-		"chrome-debugging-client": "^2.0.0",
 		"express": "^4.18.2",
-		"fast-xml-parser": "^4.2.2",
-		"mongodb-client-encryption": "^2.8.0",
-		"puppeteer": "^20.5.0"
+		"mermaid": "^10.2.3"
 	}
 }
