--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"axios": "^1.4.0",
 		"bufferutil": "^4.0.7",
 		"express": "^4.18.2",
-		"mermaid": "^10.2.3"
+		"mermaid": "^10.2.3",
+		"socket.io": "^4.7.0"
 	}
 }
