--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -4,8 +4,9 @@
 		"target": "ES2020",
 		"lib": ["ES2020", "dom"],
 		"sourceMap": true,
-		"rootDir": "src",
+		"rootDir": "../extension/src",
 		"strict": true /* enable all strict type-checking options */
+		// "esModuleInterop": true
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
