--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"vscode:prepublish": "npm run package",
 		"compile": "webpack",
 		"watch": "webpack --watch",
-		"client": "npm start --prefix client",
+		"client": "npm start --prefix pern_src/client",
 		"dev": "concurrently \"npm run watch\" \"npm run client\"",
 		"package": "webpack --mode production --devtool hidden-source-map",
 		"compile-tests": "tsc -p . --outDir out",
