--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"bufferutil": "^4.0.7",
 		"express": "^4.18.2",
 		"mermaid": "^10.2.3",
+		"pgsql-parser": "^13.5.0",
 		"socket.io": "^4.7.0",
 		"socket.io-client": "^4.7.0"
 	}
