--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
 		"webpack-cli": "^5.0.2"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/material": "^5.13.7",
+		"@mui/styled-engine-sc": "^5.12.0",
 		"axios": "^1.4.0",
 		"bufferutil": "^4.0.7",
 		"concurrently": "^8.2.0",
@@ -66,6 +70,7 @@
 		"mermaid": "^10.2.3",
 		"pgsql-parser": "^13.5.0",
 		"socket.io": "^4.7.0",
-		"socket.io-client": "^4.7.0"
+		"socket.io-client": "^4.7.0",
+		"styled-components": "^5.3.11"
 	}
 }
