--- a/pern_src/client/package.json
+++ b/pern_src/client/package.json
@@ -3,13 +3,21 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.13.7",
+		"@mui/lab": "^5.0.0-alpha.135",
+		"@mui/material": "^5.13.7",
+		"@mui/styled-engine-sc": "^5.12.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"recharts": "^2.7.2",
 		"socket.io-client": "^4.7.1",
+		"styled-components": "^5.3.11",
 		"vscode": "^1.1.37",
 		"web-vitals": "^2.1.4"
 	},
