--- a/pern_src/client/package.json
+++ b/pern_src/client/package.json
@@ -12,10 +12,14 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/mermaid": "^9.2.0",
 		"d3": "^7.8.5",
+		"mermaid": "^10.2.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-mermaid": "^0.1.3",
 		"react-scripts": "5.0.1",
+		"reactflow": "^11.7.4",
 		"recharts": "^2.7.2",
 		"socket.io-client": "^4.7.1",
 		"styled-components": "^5.3.11",
