--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"compile": "webpack",
 		"watch": "webpack --watch",
 		"client": "npm start --prefix pern_src/client",
-		"dev": "concurrently \"npm run watch\" \"npm run client\"",
+		"server": "npm start --prefix pern_src/server",
+		"dev": "concurrently \"npm run watch\" \"npm run client\" \"npm run server\"",
 		"package": "webpack --mode production --devtool hidden-source-map",
 		"compile-tests": "tsc -p . --outDir out",
 		"watch-tests": "tsc -p . -w --outDir out",
