--- a/pern_src/server/package.json
+++ b/pern_src/server/package.json
@@ -17,8 +17,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/pg": "^8.10.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.1"
   }
