--- a/pern_src/client/package.json
+++ b/pern_src/client/package.json
@@ -17,6 +17,7 @@
 		"d3": "^7.8.5",
 		"mermaid": "^10.2.4",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-mermaid": "^0.1.3",
 		"react-scripts": "5.0.1",
