--- a/pern_src/client/package.json
+++ b/pern_src/client/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.4.0",
 		"d3": "^7.8.5",
 		"mermaid": "^10.2.4",
+		"pgsql-parser": "^13.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-mermaid": "^0.1.3",
