--- a/pern_src/server/package.json
+++ b/pern_src/server/package.json
@@ -22,6 +22,7 @@
     "@types/pg": "^8.10.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "pgsql-parser": "^13.5.0"
   }
 }
