--- a/pern_src/server/package.json
+++ b/pern_src/server/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.1",
+    "pgsql-parser": "^13.5.0",
     "socket.io": "^4.7.1"
   }
 }
