--- a/pern_src/client/package.json
+++ b/pern_src/client/package.json
@@ -25,7 +25,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "PORT=1337 react-scripts start",
+		"start": "PORT=1337 BROWSER=none react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
